add progress to beamer diaporama

--- a/25_projet_data_scientist/reports/5_diaporama/diaporama.tex
+++ b/25_projet_data_scientist/reports/5_diaporama/diaporama.tex
@@ -577,7 +577,7 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
   \end{itemize}
  \end{itemize}
  \begin{itemize}
-  \item Best cross-validation (stratified 3-folds) of \textbf{$94.74$\%} obtained for number of neighboors $k = 5$. 
+  \item Best cross-validation (stratified 3-folds) of $94.74$\% obtained for number of neighboors $k = 5$. 
  \end{itemize}
 \end{frame}
 
@@ -682,7 +682,7 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
   \end{itemize}
  \end{itemize}
  \begin{itemize}
-  \item Best cross-validation (stratified 3-folds) of \textbf{$92.26$\%} with SGD learning rate of $0.001$ and penalization of $0.001$. 
+  \item Best cross-validation (stratified 3-folds) of $92.26$\% with SGD learning rate of $0.001$ and penalization of $0.001$. 
  \end{itemize}
 \end{frame}
 
@@ -763,7 +763,7 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
       \hline
       \textbf{6} & 100\% \\
       \hline
-      \textbf{mean} & 89.82\% \\
+      \textbf{mean} & 90.51\% \\
       \hline
     \end{tabular}
     }
@@ -1236,17 +1236,17 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
     \hline
      & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{6}\\
     \hline
-    \textbf{1} & 32533 & 0 & 0 & 0 & 0 & 0\\
+    \textbf{1} & 1601 & 244 & 7 & 4 & 1 & 0\\
     \hline
-    \textbf{2} & 0 & 1252 & 0 & 0 & 0 & 0\\
+    \textbf{2} & 158 & 249 & 18 & 2 & 1 & 0\\
     \hline
-    \textbf{3} & 0 & 0 & 288 & 0 & 0 & 0\\
+    \textbf{3} & 2 & 36 & 16 & 3 & 0 & 0\\
     \hline
-    \textbf{4} & 0 & 0 & 0 & 78 & 0 & 0\\
+    \textbf{4} & 1 & 0 & 5 & 1 & 0 & 2\\
     \hline
-    \textbf{5} & 0 & 0 & 0 & 0 & 15 & 0\\
+    \textbf{5} & 1 & 0 & 0 & 0 & 0 & 0\\
     \hline
-    \textbf{6} & 0 & 0 & 0 & 0 & 0 & 24\\
+    \textbf{6} & 0 & 0 & 0 & 0 & 0 & 0\\
     \hline
   \end{tabular}
   }
@@ -1267,19 +1267,19 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
       \hline
       \textbf{category} & \textbf{mean score}\\
       \hline
-      \textbf{1} & 100\% \\
+      \textbf{1} & 86.21\% \\
       \hline
-      \textbf{2} & 100\% \\
+      \textbf{2} & 58.18\% \\
       \hline
-      \textbf{3} & 100\% \\
+      \textbf{3} & 28.07\% \\
       \hline
-      \textbf{4} & 100\% \\
+      \textbf{4} & 11.11\% \\
       \hline
-      \textbf{5} & 100\% \\
+      \textbf{5} & 0\% \\
       \hline
-      \textbf{6} & 100\% \\
+      \textbf{6} & - \\
       \hline
-      \textbf{mean} & 100\% \\
+      \textbf{total} & 79.38\% \\
       \hline
     \end{tabular}
     }
@@ -1327,17 +1327,17 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
     \hline
      & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{6}\\
     \hline
-    \textbf{1} & 32533 & 0 & 0 & 0 & 0 & 0\\
+    \textbf{1} & 363 & 41 & 2 & 0 & 0 & 0\\
     \hline
-    \textbf{2} & 0 & 1252 & 0 & 0 & 0 & 0\\
+    \textbf{2} & 73 & 60 & 19 & 2 & 0 & 0\\
     \hline
-    \textbf{3} & 0 & 0 & 288 & 0 & 0 & 0\\
+    \textbf{3} & 1 & 6 & 6 & 1 & 0 & 0\\
     \hline
-    \textbf{4} & 0 & 0 & 0 & 78 & 0 & 0\\
+    \textbf{4} & 1 & 0 & 2 & 2 & 2 & 0\\
     \hline
-    \textbf{5} & 0 & 0 & 0 & 0 & 15 & 0\\
+    \textbf{5} & 0 & 0 & 1 & 0 & 0 & 0\\
     \hline
-    \textbf{6} & 0 & 0 & 0 & 0 & 0 & 24\\
+    \textbf{6} & 0 & 2 & 0 & 1 & 0 & 4\\
     \hline
   \end{tabular}
   }
@@ -1358,19 +1358,19 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
       \hline
       \textbf{category} & \textbf{mean score}\\
       \hline
-      \textbf{1} & 100\% \\
+      \textbf{1} & 89.41\% \\
       \hline
-      \textbf{2} & 100\% \\
+      \textbf{2} & 38.96\% \\
       \hline
-      \textbf{3} & 100\% \\
+      \textbf{3} & 42.86\% \\
       \hline
-      \textbf{4} & 100\% \\
+      \textbf{4} & 28.57\% \\
       \hline
-      \textbf{5} & 100\% \\
+      \textbf{5} & 0\% \\
       \hline
-      \textbf{6} & 100\% \\
+      \textbf{6} & 57.14\% \\
       \hline
-      \textbf{mean} & 100\% \\
+      \textbf{total} & 73.85\% \\
       \hline
     \end{tabular}
     }
@@ -1418,17 +1418,17 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
     \hline
      & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{6}\\
     \hline
-    \textbf{1} & 32533 & 0 & 0 & 0 & 0 & 0\\
+    \textbf{1} & 277 & 5 & 2 & 0 & 0 & 0\\
     \hline
-    \textbf{2} & 0 & 1252 & 0 & 0 & 0 & 0\\
+    \textbf{2} & 54 & 47 & 14 & 5 & 1 & 0\\
     \hline
-    \textbf{3} & 0 & 0 & 288 & 0 & 0 & 0\\
+    \textbf{3} & 2 & 6 & 14 & 9 & 0 & 0\\
     \hline
-    \textbf{4} & 0 & 0 & 0 & 78 & 0 & 0\\
+    \textbf{4} & 0 & 0 & 1 & 1 & 0 & 0\\
     \hline
-    \textbf{5} & 0 & 0 & 0 & 0 & 15 & 0\\
+    \textbf{5} & 0 & 0 & 0 & 0 & 0 & 0\\
     \hline
-    \textbf{6} & 0 & 0 & 0 & 0 & 0 & 24\\
+    \textbf{6} & 0 & 0 & 0 & 0 & 0 & 0\\
     \hline
   \end{tabular}
   }
@@ -1449,19 +1449,19 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
       \hline
       \textbf{category} & \textbf{mean score}\\
       \hline
-      \textbf{1} & 100\% \\
+      \textbf{1} & 96.01\% \\
       \hline
-      \textbf{2} & 100\% \\
+      \textbf{2} & 38.84\% \\
       \hline
-      \textbf{3} & 100\% \\
+      \textbf{3} & 45.16\% \\
       \hline
-      \textbf{4} & 100\% \\
+      \textbf{4} & 50.0\% \\
       \hline
-      \textbf{5} & 100\% \\
+      \textbf{5} & - \% \\
       \hline
-      \textbf{6} & 100\% \\
+      \textbf{6} & - \% \\
       \hline
-      \textbf{mean} & 100\% \\
+      \textbf{mean} & 74.48\% \\
       \hline
     \end{tabular}
     }
