add progress to diaporama beamer

--- a/25_projet_data_scientist/reports/5_diaporama/diaporama.tex
+++ b/25_projet_data_scientist/reports/5_diaporama/diaporama.tex
@@ -26,7 +26,7 @@
 \usetheme{Warsaw}
 
 
-\title[High-Res satellite images for human density prediction]{High-Res Landsat-8 satellite images \\for human density prediction}
+\title[High-Res satellite images for human density prediction]{High-Resolution Landsat-8 satellite images \\for human density prediction}
 
 \author{Youcef Kacer}
 
@@ -47,14 +47,14 @@
 \logo{\includegraphics[height=5mm]{images/logo/TelecomParisTech_logo_200_01.png}}
 \end{frame}
 
-\begin{frame}
-\tableofcontents
-\end{frame}
+% \begin{frame}
+% \tableofcontents
+% \end{frame}
 
 \section{Presentation}
-\begin{frame}
-\tableofcontents[currentsection]
-\end{frame}
+% \begin{frame}
+% \tableofcontents[currentsection]
+% \end{frame}
 
 \begin{frame}
 \begin{itemize}
@@ -70,9 +70,9 @@
 \section{Landsat-8 imagery}
 
 \subsection{Earth Covering}
-\begin{frame}[label=Covering]
-\tableofcontents[currentsubsection]
-\end{frame}
+% \begin{frame}[label=Covering]
+% \tableofcontents[currentsubsection]
+% \end{frame}
 
 \begin{frame}
 
@@ -95,9 +95,9 @@
 \end{frame}
 
 \subsection{Image Georeferencement}
-\begin{frame}
-\tableofcontents[currentsubsection]
-\end{frame}
+% \begin{frame}
+% \tableofcontents[currentsubsection]
+% \end{frame}
 
 \begin{frame}
 \begin{itemize}
@@ -221,7 +221,7 @@ System (\begin{itshape}ex: UTM, Lambert IV, Lambert 93, Web Mercator,...\end{its
 \end{overlayarea}
 \begin{overlayarea}{\linewidth}{1cm}
   \centering
-  \scriptsize 68 resulting datasets georeferenced in \begin{ishape}Web Mercator\end{itshape} system\par
+  \scriptsize 68 resulting datasets georeferenced in \begin{itshape}Web Mercator\end{itshape} system\par
 \end{overlayarea}
 \end{column}
 \end{columns}
@@ -894,7 +894,7 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
   \end{overlayarea}
   \begin{overlayarea}{\linewidth}{1cm}
     \centering
-    \tiny Switzerland datasets georeferenced in \begin{ishape}Web Mercator\end{itshape} system\par
+    \tiny Switzerland datasets georeferenced in \begin{itshape}Web Mercator\end{itshape} system\par
   \end{overlayarea}
   \end{column}
   \begin{column}{0.33\textwidth}
@@ -904,7 +904,7 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
   \end{overlayarea}
   \begin{overlayarea}{\linewidth}{1cm}
     \centering
-    \tiny Belgium datasets georeferenced in \begin{ishape}Web Mercator\end{itshape} system\par
+    \tiny Belgium datasets georeferenced in \begin{itshape}Web Mercator\end{itshape} system\par
   \end{overlayarea}
   \end{column}
   \begin{column}{0.33\textwidth}
@@ -914,7 +914,7 @@ Besancon & 0 & 0 & ... & 97 & 122 & ... & 0 & 0 & 1797.9 & 1\\
   \end{overlayarea}
   \begin{overlayarea}{\linewidth}{1cm}
     \centering
-    \tiny Netherlands datasets georeferenced in \begin{ishape}Web Mercator\end{itshape} system\par
+    \tiny Netherlands datasets georeferenced in \begin{itshape}Web Mercator\end{itshape} system\par
   \end{overlayarea}
   \end{column}
  \end{columns}
